--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,6 +6,10 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-
+<ion-content>
+  <ion-list>
+    <ion-item *ngFor="let category of categories" (click)="loadCategory(category?.id)">
+      {{ category?.name }}
+    </ion-item>
+  </ion-list>
 </ion-content>
